--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "vibetube",
   "version": "1.0.0",
   "description": "backend for a video streaming service",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +13,13 @@
     "vibetube"
   ],
   "author": "Lakshit Somani",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.21.0",
+    "mongoose": "^8.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.4"
+  }
 }
