--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET=use-some-lengthy-secret-for-better-encryption
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=use-some-lengthy-secret-for-better-encryption
 REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
